# network-devices

./: .env  Cargo.toml  Dockerfile  README.md  curl.sh  docker-compose.yaml
front/: package-lock.json  package.json
migrations/: 20210822181424_devices.sql
src/: main.rs  site.rs
